--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,24 +1,15 @@
-{{!-- <!-- Loop over each object in the projects array -->
-{{#each projects as |project| }}
-<div class="row mb-4 project">
-  <div class="col-md-5">
-    <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      {{{get_emoji}}}
-      <a href="/project/{{project.id}}">{{project.name}}</a>
-    </h2>
-    <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
-      needed!
-    </p>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
-  </div>
-  <div class="col-md-7">
-    <p>
-      {{project.description}}
-    </p>
-  </div>
-</div>
-{{/each}} --}}
+{{!-- <main class="flex flex-wrap justify-center">
+        <div><header class = "text-5xl bg-amber-300 text-center mx-5 my-5 p-4 border-double border-4">Tasks
+            <ul class = "text-lg my-2">bgfrnrsjdkblntjrk<button class= "text-sm m-2 border-solid border-2 border-y-slate-950">✔️</button><button class = "text-sm m-2 border-solid border-2 border-y-slate-950">🗑️</button></ul>
+            <ul class = "text-lg my-2">bgfrnrsjdkblntjrk<button class= "text-sm m-2 border-solid border-2 border-y-slate-950">✔️</button><button class = "text-sm m-2 border-solid border-2 border-y-slate-950">🗑️</button></ul>
+            <ul class = "text-lg my-2">bgfrnrsjdkblntjrk<button class= "text-sm m-2 border-solid border-2 border-y-slate-950">✔️</button><button class = "text-sm m-2 border-solid border-2 border-y-slate-950">🗑️</button></ul>
+        </div>
+        <div><header class = "text-5xl bg-green-500 text-center mx-5 my-5 p-4 border-double border-4">Completed Tasks
+            <ul class = "text-lg my-2">bgfrnrsjdkblntjrk</ul>
+            <ul class = "text-lg my-2">bgfrnrsjdkblntjrk</ul>
+            <ul class = "text-lg my-2">bgfrnrsjdkblntjrk</ul>
+        </div>
+        <div class = "text-center text-4xl mx-5 my-5 p-4 border-double border-4 bg-red-600">Money Spent
+            <ul class = "text-3xl">$</ul>
+        </div>
+</main> --}}
