--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-6">
     <h2>Login</h2>
-
+{{!-- TO DO - either or ? --}}
     <form class="form login-form">
       <div class="form-group">
         <label for="email-login">Email:</label>
