--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -1,24 +1,16 @@
 <div class="text-center">
   <h2>{{name}}</h2>
-  <p>{{{get_emoji}}}</p>
   <p>{{description}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
-  <p>
-    <span for="img" aria-label="money">💲</span>
-    <span class="dollar-amount">{{format_amount needed_funding}}</span>
-    needed
-  </p>
 
    <main class="flex flex-wrap justify-center">
         <div><header class = "text-5xl bg-amber-300 text-center mx-5 my-5 p-4 border-double border-4">Tasks
-            <ul class = "text-lg my-2">bgfrnrsjdkblntjrk<button class= "text-sm m-2 border-solid border-2 border-y-slate-950">✔️</button><button class = "text-sm m-2 border-solid border-2 border-y-slate-950">🗑️</button></ul>
-            <ul class = "text-lg my-2">bgfrnrsjdkblntjrk<button class= "text-sm m-2 border-solid border-2 border-y-slate-950">✔️</button><button class = "text-sm m-2 border-solid border-2 border-y-slate-950">🗑️</button></ul>
-            <ul class = "text-lg my-2">bgfrnrsjdkblntjrk<button class= "text-sm m-2 border-solid border-2 border-y-slate-950">✔️</button><button class = "text-sm m-2 border-solid border-2 border-y-slate-950">🗑️</button></ul>
+            <ul class = "text-lg my-2">{{name}}<button class= "text-sm m-2 border-solid border-2 border-y-slate-950">✔️</button><button class = "text-sm m-2 border-solid border-2 border-y-slate-950">🗑️</button></ul>
+        
         </div>
         <div><header class = "text-5xl bg-green-500 text-center mx-5 my-5 p-4 border-double border-4">Completed Tasks
             <ul class = "text-lg my-2">bgfrnrsjdkblntjrk</ul>
-            <ul class = "text-lg my-2">bgfrnrsjdkblntjrk</ul>
-            <ul class = "text-lg my-2">bgfrnrsjdkblntjrk</ul>
+        
         </div>
         <div class = "text-center text-4xl mx-5 my-5 p-4 border-double border-4 bg-red-600">Money Spent
             <ul class = "text-3xl">$</ul>
