--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,6 @@
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" id="login"type="submit">Login</button>
         <button class="btn btn-primary" type="submit">Login</button>
 
       </div>
@@ -41,4 +40,4 @@
   </div>
 </div>
 
-<script src="../public/js/login.js"></script>
+<script src="js/login.js"></script>
