--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -1,7 +1,7 @@
 <div class="text-center">
   <h2>{{name}}</h2>
   <p>{{description}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
+  <p>Created by {{user.name}} on {{date_created}}</p>
 
    <main class="flex flex-wrap justify-center">
         <div><header class = "text-5xl bg-amber-300 text-center mx-5 my-5 p-4 border-double border-4">Tasks
