--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,13 +12,12 @@
   <div class="flex-column">
     <header class="justify-space-around box-border display-flex text-center p-2">
       <h1 class = "text-8xl p-5" href="/">🕘Order of the Day💵</h1>
-      <nav>
+    <nav>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
         <a href="/profile">profile</a> |
+        <a href="/dashboard">dashboard</a> |
         <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
         {{/if}}
       </nav>
     </header>
