--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -8,7 +8,7 @@
   <div class="col-md-6">
     <h3>Create a New Task:</h3>
 
-    <form class="form new-Task-form">
+    <form class="form">
       <div class="form-group">
         <label for="Task-name">Task Name:</label>
         <input class="form-input" type="text" id="Task-name" name="Task-name" />
@@ -17,32 +17,25 @@
         <label for="Task-Description">Description:</label>
         <input class="form-input" type="text" id="Task-Description" name="Task-Description" />
       </div>
+      <div class="form-group">
+        <label for="starting_time">Start Time:</label>
+        <input class="form-input" type="text" id="starting_time" name="starting_time" />
+      </div>
+      <div class="form-group">
+        <label for="ending_time">End Time:</label>
+        <input class="form-input" type="text" id="ending_time" name="ending_time" />
+      </div>
       {{!-- <div class="form-group">
         <label for="Task-desc">Budget:</label>
         <textarea class="form-input" type="number" id="Task-desc" name="Task-desc"></textarea>
       </div> --}}
       <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="new-Task-form btn btn-primary">Create</button>
       </div>
     </form>
   </div>
-
-  {{#if Tasks.length}}
-  <div class="col-md-6 Task-list">
-    <h3>Current Tasks:</h3>
-
-    {{#each Tasks as |Task|}}
-    <div class="row mb-2">
-      <div class="col-md-8">
-        <h4><a href="/Task/{{Task.id}}">{{Task.name}}</a></h4>
-      </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{Task.id}}">DELETE</button>
-      </div>
-    </div>
-    {{/each}}
-  </div>
-  {{/if}}
 </div>
+
+
 
 <script src="js/profile.js"></script>
