render tasks in /tasks

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<!-- Loop over each object in the projects array -->
+{{!-- <!-- Loop over each object in the projects array -->
 {{#each tasks as |task| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
@@ -30,4 +30,4 @@
     </div>
   {{/if}}
 
-  {{!-- <script src="js/dashboard.js"></script> --}}
+  <script src="js/dashboard.js"></script> --}}
