--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
         <a href="/profile">profile</a> |
-        <a href="/dashboard">dashboard</a> |
+        <a href="/tasks">tasks</a> |
         <button class="no-button" id="logout">logout</button>
         {{/if}}
       </nav>
@@ -38,4 +38,5 @@
   {{/if}}
 </body>
 
+  
 </html>
