--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -8,14 +8,14 @@
   <div class="col-md-6">
     <h3>Create a New Task:</h3>
 
-    <form class="form">
+    <form class="form new-Task-form">
       <div class="form-group">
         <label for="Task-name">Task Name:</label>
-        <input class="form-input" type="text" id="Task-name" name="Task-name" />
+        <input class="form-input" type="text" id="task-name" name="Task-name" />
       </div>
       <div class="form-group">
         <label for="Task-Description">Description:</label>
-        <input class="form-input" type="text" id="Task-Description" name="Task-Description" />
+        <input class="form-input" type="text" id="task-desc" name="Task-Description" />
       </div>
       <div class="form-group">
         <label for="starting_time">Start Time:</label>
@@ -30,12 +30,10 @@
         <textarea class="form-input" type="number" id="Task-desc" name="Task-desc"></textarea>
       </div> --}}
       <div class="form-group">
-        <button type="submit" class="new-Task-form btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-primary">Create</button>
       </div>
     </form>
   </div>
 </div>
-
-
 
 <script src="js/profile.js"></script>
