--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -1,10 +1,11 @@
 <!-- Loop over each object in the projects array -->
+{{#if tasks.length}}
 {{#each tasks as |task| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      <a href="/tasks/{{task.id}}">{{task.name}}</a>
+      <a href="/tasks/{{task.id}}">{{task.title}}</a>
     </h2>
     <p>{{task.description}}</p>
     <p>{{task.starting_time}}</p>
@@ -12,9 +13,9 @@
   </div>
 </div>
 {{/each}}
+{{/if}}
 
-{{#if Tasks.length}}
-    <div class="col-md-6 Task-list ">
+    {{!-- <div class="col-md-6 Task-list ">
       <h3>Current Tasks:</h3>
 
         {{#each Tasks as |Task|}}
@@ -23,14 +24,11 @@
           <h4><a href="/Task/{{Task.id}}">{{Task.name}}</a></h4>
           </div>
             <div class="col-md-4">
-            <button class="btn btn-sm btn-danger" data-id="{{Task.id}}">DELETE</button>
+           
             </div>
           </div>
           {{/each}}
-    </div>
-  {{/if}}
-
-  <script src="js/tasks.js"></script>
+    </div> --}}
 {{!-- <div class="text-center">
   <h2>{{name}}</h2>
   <p>{{description}}</p>
