Added css to homepage handlebars

--- a/views/example.html
+++ b/views/example.html
@@ -12,3 +12,10 @@
 
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="./assets/css/style.css" />
+
+<!-- <div>
+    <a href="login">LOGIN</a>
+</div>
+<div>
+    <a href="signup">SIGNUP</a>
+</div> -->
