Added script tailwind script routes for handlebars and fixed the login button

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <script src="https://cdn.tailwindcss.com"></script>
-<link rel="stylesheet" href="./assets/css/style.css" />
+<link rel="stylesheet" href="./public/css/output.css"/>
 
 <div class="h-screen overflow-hidden flex items-center justify-center m-0">
     <div class="col-md-6 bg-gradient-to-r from-amber-600 to-amber-300 lg:w-6/12 md:7/12 w-8/12 shadow-3xl rounded-xl">
@@ -22,7 +22,6 @@
         </div>
       </form>
     </div>
-    
-  </div>
+</div>
   
   <script src="js/login.js"></script>
