--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,4 +11,4 @@
 </body>
 
 <script src="https://cdn.tailwindcss.com"></script>
-<link rel="stylesheet" href="./assets/css/style.css" />
+<link rel="stylesheet" href="./public/css/output.css"/>
