--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,20 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./public/css/output.css"/>
   <title>Order of the day</title>
   {{!-- <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css"> --}}
 </head>
 <body class="bg-cyan-950 bg-gradient-to-r from-amber-500">
   <div class="flex-column">
-    <header class="justify-space-around box-border display-flex text-center p-2">
+    <header class="justify-space-around box-border display-flex text-center p-2 bg-gradient-to-b from-rose-600">
       <h1 class = "text-8xl p-5" href="/">🕘Order of the Day💵</h1>
     <nav>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <a href="/tasks">tasks</a> |
-        <button class="no-button" id="logout">logout</button>
+        <a href="/profile" class="bg-gradient-to-b from-gray-700 to-gray-900 font-medium p-2 text-white w-full rounded">Profile</a> |
+        <a href="/tasks" class="bg-gradient-to-b from-gray-700 to-gray-900 font-medium p-2 text-white w-full rounded">Tasks</a> |
+        <button class="no-button bg-gradient-to-b from-violet-700 to-gray-900 font-medium p-2 text-white rounded" id="logout">Logout</button>
         {{/if}}
       </nav>
     </header>
