--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -11,3 +11,4 @@
        <button class="del-task btn btn-sm btn-danger" data-id="{{task.id}}">DELETE</button>
 </div>
 <script src="/js/task.js"></script> 
+<link rel="stylesheet" href="./public/css/output.css"/>
