--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -15,6 +15,8 @@
 {{/each}}
 {{/if}}
 
+<link rel="stylesheet" href="./public/css/output.css"/>
+
     {{!-- <div class="col-md-6 Task-list ">
       <h3>Current Tasks:</h3>
 
