--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,38 +1,71 @@
 <div class="row">
-    <div class="col-auto overflow-hidden flex items-center justify-center m-0 text-3xl">
-      <h2>Welcome, {{name}}!</h2>
-    </div>
+  <div
+    class="col-auto overflow-hidden flex items-center justify-center m-0 text-3xl"
+  >
+    <h2>Welcome, {{name}}!</h2>
   </div>
-  
-  <div class="row mt-4 h-screen overflow-hidden flex items-center justify-center m-0">
-    <div class="col-md-6 bg-gradient-to-r from-amber-600 to-amber-300 lg:w-6/12 md:7/12 w-8/12 shadow-3xl rounded-xl">
-      <h3 class ="text-center text-2xl pt-10">Create a New Task:</h3>
-  
-      <form class="form new-Task-form p-12 md:p-24">
-        <div class="form-group flex items-center text-lg mb-6 md:mb-8">
-          <input class="form-input bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full" type="text" id="task-name" name="Task-name" placeholder="Task Name"/>
-        </div>
-        <div class="form-group flex items-center text-lg mb-6 md:mb-8">
-          <input class="form-input bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full" type="text" id="task-desc" name="Task-Description" placeholder="Description"/>
-        </div>
-        <div class="form-group flex items-center text-lg mb-6 md:mb-8">
-          <input class="form-input bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full" type="text" id="starting_time" name="starting_time" placeholder="Start Time"/>
-        </div>
-        <div class="form-group flex items-center text-lg mb-6 md:mb-8">
-          <input class="form-input bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full" type="text" id="ending_time" name="ending_time" placeholder="End Time"/>
-        </div>
-        <!-- <div class="form-group">
+</div>
+
+<div
+  class="row mt-4 h-screen overflow-hidden flex items-center justify-center m-0"
+>
+  <div
+    class="col-md-6 bg-gradient-to-r from-amber-600 to-amber-300 lg:w-6/12 md:7/12 w-8/12 shadow-3xl rounded-xl"
+  >
+    <h3 class="text-center text-2xl pt-10">Create a New Task:</h3>
+
+    <form class="form new-Task-form p-12 md:p-24">
+      <div class="form-group flex items-center text-lg mb-6 md:mb-8">
+        <input
+          class="form-input bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full"
+          type="text"
+          id="task-name"
+          name="Task-name"
+          placeholder="Task Name"
+        />
+      </div>
+      <div class="form-group flex items-center text-lg mb-6 md:mb-8">
+        <input
+          class="form-input bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full"
+          type="text"
+          id="task-desc"
+          name="Task-Description"
+          placeholder="Description"
+        />
+      </div>
+      <div class="form-group flex items-center text-lg mb-6 md:mb-8">
+        <input
+          class="form-input bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full"
+          type="time"
+          id="starting_time"
+          name="starting_time"
+          placeholder="Start Time"
+        />
+      </div>
+      <div class="form-group flex items-center text-lg mb-6 md:mb-8">
+        <input
+          class="form-input bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full"
+          type="time"
+          id="ending_time"
+          name="ending_time"
+          placeholder="End Time"
+        />
+      </div>
+      <!-- <div class="form-group">
           <label for="Task-desc">Budget:</label>
           <textarea class="form-input" type="number" id="Task-desc" name="Task-desc"></textarea>
         </div> -->
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary bg-gradient-to-b from-gray-700 to-gray-900 font-medium p-2 md:p-4 text-white uppercase w-full rounded">Create</button>
-        </div>
-      </form>
-    </div>
+      <div class="form-group">
+        <button
+          type="submit"
+          class="btn btn-primary bg-gradient-to-b from-gray-700 to-gray-900 font-medium p-2 md:p-4 text-white uppercase w-full rounded"
+        >Create</button>
+      </div>
+    </form>
   </div>
+</div>
 
 <script src="https://cdn.tailwindcss.com"></script>
-<link rel="stylesheet" href="./public/css/output.css"/>
+<link rel="stylesheet" href="./public/css/output.css" />
 
 <script src="js/profile.js"></script>
