--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -1,15 +1,17 @@
+<script src="https://cdn.tailwindcss.com"></script>
+<link rel="stylesheet" href="./public/css/output.css"/>
+
 <!-- Loop over each object in the projects array -->
 {{#if tasks.length}}
 {{#each tasks as |task| }}
-<div class="row mb-4 project">
-  <div class="col-md-5">
+<div class="row mb-4 project overflow-hidden flex items-center justify-center m-0">
+  <div class="col-md-5 bg-gradient-to-r from-amber-600 to-amber-300 lg:w-6/12 md:7/12 w-8/12 shadow-3xl rounded-xl pt-1">
     <h2>
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      <a href="/tasks/{{task.id}}">{{task.title}}</a>
+      <a href="/tasks/{{task.id}}" class = "text-2xl ml-5">{{task.title}}</a>
     </h2>
-    <p>{{task.description}}</p>
-    <p>{{task.starting_time}}</p>
-    <p>{{task.ending_time}}</p>
+    <p class = "bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full">📋 {{task.description}}</p>
+    <p class = "bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full">🕐 {{task.starting_time}} to {{task.ending_time}}</p>
   </div>
 </div>
 {{/each}}
