--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -52,7 +52,7 @@
         />
       </div>
         <div class="form-group flex items-center text-lg mb-6 md:mb-8">
-        {{!-- {{#if has_completed}} --}}
+       <label>completed</label>
         <input
           class="form-input bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full"
           type="checkbox"
@@ -61,7 +61,8 @@
           placeholder="has_completed"
           checked
         />
-         {{!-- {{else}} --}}
+        <br />
+         <label>Not Started</label>
          <input
           class="form-input bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full"
           type="checkbox"
@@ -70,10 +71,6 @@
           placeholder="has_completed"
           unchecked
         />
-        {{!-- {{/if}} --}}
-         <label for="has_completed">
-        Check box if this task is completed
-      </label>
       </div>
       <div class="form-group">
         <button
