--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -24,24 +24,43 @@
       Update Task
     </h2>
     <form>
-      <label for="title" class = "flex text-2xl ml-5 mt-2">
-        Task Title:
-      </label>
       <br />
-      <textarea class= "bg-gray-200 rounded pl-12 py-2 md:py-1 focus:outline-none w-full" id="title" name ="title" rows="2" cols="30">
-        {{task.title}}
-      </textarea>
-      <br />
-      <textarea class= "bg-gray-200 rounded pl-12 py-2 md:py-1 focus:outline-none w-full" id="description" name="description" rows="5" cols="30">
-        {{description}}
-      </textarea>
-      <textarea class= "bg-gray-200 rounded pl-12 py-2 md:py-1 focus:outline-none w-full" id="starting_time" name="starting_time" rows="5" cols="30">
-        {{starting_time}}
-      </textarea>
-      <br />
-      <textarea class= "bg-gray-200 rounded pl-12 py-2 md:py-1 focus:outline-none w-full" id="ending_time" name="ending_time" rows="5" cols="30">
-        {{ending_time}}
-      </textarea>
+      <div class="form-group flex items-center text-lg mb-6 md:mb-8">
+        <input
+          class="form-input bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full"
+          type="text"
+          id="title"
+          name="Task-name"
+          placeholder="Task Name"
+        />
+      </div>
+      <div class="form-group flex items-center text-lg mb-6 md:mb-8">
+        <input
+          class="form-input bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full"
+          type="text"
+          id="description"
+          name="Task-Description"
+          placeholder="Description"
+        />
+      </div>
+      <div class="form-group flex items-center text-lg mb-6 md:mb-8">
+        <input
+          class="form-input bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full"
+          type="time"
+          id="starting_time"
+          name="starting_time"
+          placeholder="Start Time"
+        />
+      </div>
+      <div class="form-group flex items-center text-lg mb-6 md:mb-8">
+        <input
+          class="form-input bg-gray-200 rounded pl-12 py-2 md:py-4 focus:outline-none w-full"
+          type="time"
+          id="ending_time"
+          name="ending_time"
+          placeholder="End Time"
+        />
+      </div>
       <br />
       <br />
       <input type="checkbox" id="has_completed" name="has_completed" value="true" />
@@ -49,8 +68,8 @@
         Check box if this task is completed
       </label>
       <br />
-      <button class="edit-task-form bg-gradient-to-b from-gray-700 to-gray-900 font-medium p-2 md:p-4 text-white uppercase rounded object-center" type="submit" value="Submit">
-        Submit
+      <button class="edit-task-form bg-gradient-to-b from-gray-700 to-gray-900 font-medium p-2 md:p-4 text-white uppercase rounded object-center" type="submit" value="Submit" data-id="{{task.id}}">
+        Update
       </button>
     </form>
   </div>
