--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
   <title>Order of the day</title>
 </head>
 <body class="bg-cyan-950 bg-gradient-to-r from-amber-500">
-  <div class="flex-column">
+  <div class="flex flex-col items-center">
     <header class="justify-space-around box-border display-flex text-center p-2 bg-gradient-to-b from-rose-600">
       <h1 class = "text-8xl p-5" href="/">🕘Order of the Day💵</h1>
     <nav>
